--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "AGPL",
   "dependencies": {
     "express": "^4.13.0",
+    "forever": "^0.14.2",
     "multiparty": "^4.1.2",
     "mysql": "^2.7.0",
     "sequelize": "^3.3.2"
