--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "AGPL",
   "dependencies": {
+    "basic-auth": "^1.0.3",
     "express": "^4.13.0",
     "forever": "^0.14.2",
     "multiparty": "^4.1.2",
